# Thermite

./: .gitignore  BENCHMARKS.md  Cargo.toml  DEVLOG.md  PROJECT.md  README.md  STATUS.md  TEST_INFRA.md  auto_skip.py  benchmark.py  drfixitlog.md  ensemble_v260.rs  fix_exceptions.py  linear_model_v260.rs  pyproject.toml  run_benchmarks_original.py  scratch.py  scratch2.py  skip_failing_tests.py  test_categorical.py  test_col_major.rs  test_gb.py  test_gil.rs  test_gpu_ensemble.py  test_grid_search.py  test_gridsearch.py  test_kmeans_sparse.py  test_log_reg.rs  test_multiclass.py  test_partial_fit.py  test_partial_fit_lr.py  test_pipeline.py  test_sparse.py  verify_m1.py
.agents/: ORIGINAL_REQUEST.md
.agents/auditor_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  challenge_m1_1.py  handoff.md  progress.md
.agents/challenger_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  challenge_m1_2.py  handoff.md  progress.md
.agents/explorer_f0_exploration/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_alg_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_alg_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/explorer_m1_alg_3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  plan.md  progress.md
.agents/reviewer_f4_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  review.md
.agents/reviewer_f4_2/: BRIEFING.md  ORIGINAL_REQUEST.md  debug_platt.py  handoff.md  progress.md  review.md
.agents/reviewer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/sub_orch_e2e/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  progress.md
.agents/sub_orch_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  progress.md
.agents/worker_e2e_infra/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_e2e_tier1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_e2e_tier2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_e2e_tier3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_e2e_tier4/: ORIGINAL_REQUEST.md  progress.md
.agents/worker_f1_nan_support/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_f2_svm/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_f3_blas/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_f4_fixes/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_m1_alg/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_m1_fix/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_results.md  results.json
crates/thermite-binding/: Cargo.toml
crates/thermite-binding/src/: automl_bind.rs  causal_bind.rs  cluster_bind.rs  cross_decomposition_bind.rs  decomposition_bind.rs  ensemble_bind.rs  feature_selection_bind.rs  federated_bind.rs  graph_bind.rs  hyperband_bind.rs  impute_bind.rs  lib.rs  linear_model_bind.rs  manifold_bind.rs  metrics_bind.rs  mixture_bind.rs  model_selection_bind.rs  multi_output_bind.rs  naive_bayes_bind.rs  neighbors_bind.rs  neural_network_bind.rs  rag_bind.rs  recommender_bind.rs  survival_bind.rs  svm_bind.rs  text_bind.rs  time_series_bind.rs  tree_bind.rs
crates/thermite-core/: Cargo.toml  build.rs
crates/thermite-core/src/: automl.rs  causal.rs  cluster.rs  compiler.rs  cross_decomposition.rs  decomposition.rs  ensemble.rs  feature_selection.rs  federated.rs  graph.rs  hyperband.rs  impute.rs  lib.rs  linear_model.rs  manifold.rs  metrics.rs  mixture.rs  model_selection.rs  multi_output.rs  naive_bayes.rs  neighbors.rs  neural_network.rs  preprocessing.rs  rag.rs  recommender.rs  sparse.rs  survival.rs  svm.rs  text.rs  time_series.rs  tree.rs
crates/thermite-core/src/libsvm/: svm.cpp  svm.h
crates/thermite-gpu/: Cargo.toml
crates/thermite-gpu/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  Home.md  METRICS.md
scripts/: push_to_wiki.sh
tests/: conftest.py  test_infra_check.py  test_nan_support.py  test_phase4_polars.py  test_robustness.py  test_svm.py  test_tier1_cluster_decomposition_neighbors.py  test_tier1_linear.py  test_tier1_metrics.py  test_tier1_model_selection_pipeline.py  test_tier1_preprocessing.py  test_tier1_trees.py  test_tier2_cluster_decomposition_neighbors.py  test_tier2_linear.py  test_tier2_metrics.py  test_tier2_model_selection_pipeline.py  test_tier2_preprocessing.py  test_tier2_trees.py  test_tier3_combinations.py
thermite/: __init__.py  automl.py  causal.py  cluster.py  compile_utils.py  cross_decomposition.py  decomposition.py  deep_learning.py  device.py  distributed.py  ensemble.py  feature_selection.py  federated.py  graph.py  impute.py  linear_model.py  manifold.py  metrics.py  mixture.py  model_card.py  model_selection.py  multi_output.py  naive_bayes.py  neighbors.py  neural_network.py  pipeline.py  polars_compat.py  preprocessing.py  quantum.py  rag.py  recommender.py  survival.py  svm.py  text.py  time_series.py  tree.py
