[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "thermite-ml"
version = "1.1.0"
description = "A Rust-accelerated, scikit-learn-compatible machine learning library — drop-in replacement with 2-18x speedups"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Thermite Contributors" }
]
keywords = [
    "machine-learning",
    "scikit-learn",
    "rust",
    "high-performance",
    "ml",
    "random-forest",
    "gradient-boosting",
    "gpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
polars = ["polars>=0.19.0"]
sparse = ["scipy>=1.7.0"]
all = ["polars>=0.19.0", "scipy>=1.7.0"]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=7.0",
    "scikit-learn>=1.0",
    "scipy>=1.7.0",
    "polars>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/KartavyaDikshit/Thermite"
Repository = "https://github.com/KartavyaDikshit/Thermite"
Issues = "https://github.com/KartavyaDikshit/Thermite/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/thermite-binding/Cargo.toml"
module-name = "thermite._core"
