[package]
name = "thermite-binding"
version = "2.6.6"
edition = "2021"
description = "PyO3 bindings for Thermite"

[lib]
name = "_core"
crate-type = ["cdylib"]
test = false

[dependencies]
thermite-core = { path = "../thermite-core" }
thermite-gpu = { path = "../thermite-gpu" }
pyo3 = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true }
sprs = "0.11.4"
bincode = "1.3"

[features]
intel-mkl = ["thermite-core/intel-mkl"]
openblas = ["thermite-core/openblas"]
accelerate = ["thermite-core/accelerate"]

