[package]
name = "thermite-core"
version = "2.6.6"
edition = "2021"
description = "Core Rust implementation of Thermite machine learning algorithms"

[dependencies]
ndarray = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
sprs = "0.11.4"
thermite-gpu = { path = "../thermite-gpu" }
intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-iomp"], optional = true }
openblas-src = { version = "0.10", default-features = false, features = ["cblas", "system"], optional = true }
accelerate-src = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
intel-mkl = ["ndarray/blas", "dep:intel-mkl-src"]
openblas = ["ndarray/blas", "dep:openblas-src"]
accelerate = ["ndarray/blas", "dep:accelerate-src"]

[build-dependencies]
cc = "1.2.66"


